--- a/research.html
+++ b/research.html
@@ -80,7 +80,7 @@ To this end, I developed a <b>GNN-based imitation learning framework</b> that le
 
 <p> Along with optimizing CVaR for trustworthy decision-making, we designed a <b>Pareto optimization scheme</b> that adaptively balances maximizing team performance and minimizing risk of failures based on the abundance of <b>heterogeneous</b> team resources.</p>
 
-<a href="https://link.springer.com/chapter/10.1007/978-3-030-44051-0_9" target=&ldquo;blank&rdquo;>[WAFR'18], <a href="https://arxiv.org/abs/2003.10492" target=&ldquo;blank&rdquo;>[T-RO submission]</a>: Risk-aware submodular optimization to deal with uncertainties for multi-robot coordination (left figure). 
+<a href="https://link.springer.com/chapter/10.1007/978-3-030-44051-0_9" target=&ldquo;blank&rdquo;>[WAFR'18], <a href="https://arxiv.org/abs/2003.10492" target=&ldquo;blank&rdquo;>[T-RO]</a>: Risk-aware submodular optimization to deal with uncertainties for multi-robot coordination (left figure). 
 
 <br> <a href="https://arxiv.org/abs/2003.11675" target=&ldquo;blank&rdquo;>[IROS'20]</a>: Risk-aware planning and assignment for ground vehicles using uncertain perception from aerial vehicles; dealing with uncertain extractions from Bayesian deep learning. 
 
@@ -142,7 +142,7 @@ We study the problem of <b>designing spoofing signals to corrupt and mislead the
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-05, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-17, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
