--- a/publications.html
+++ b/publications.html
@@ -72,10 +72,6 @@ function toggleBibtex(articleid) {
 </li>
 
 
-<li><p><b>L. Zhou</b> and P. Tokekar, “Risk-Aware Submodular Optimization for Multi-Robot Coordination,” T-RO 2nd revision submitted. <a href="https://arxiv.org/abs/2003.10492">[arXiv]</a>
-</p>
-</li>
-
 <li><p>Z. Zhang, <b>L. Zhou</b>, and P. Tokekar, “Strategies to Inject Spoofed Measurement Data,” RAS submitted. <a href="https://arxiv.org/abs/1809.04756">[arXiv]</a>
 </p> 
 </li>
@@ -86,6 +82,10 @@ function toggleBibtex(articleid) {
 
 <h2>Journal Papers</h2>
 <ol>
+
+<li><p><b>L. Zhou</b> and P. Tokekar, “Risk-Aware Submodular Optimization for Multi-Robot Coordination,” <i>IEEE Transactions on Robotics (T-RO)</i>. Note: accepted. <a href="https://arxiv.org/abs/2003.10492">[arXiv]</a>
+</p>
+</li>
 
 <li><p>J. Liu, <b>L. Zhou</b>, P. Tokekar, and R. K. Williams, “<a href="https://ieeexplore.ieee.org/abstract/document/9431677">Distributed Resilient Submodular Action Selection in Adversarial Environments</a>,” <i>IEEE Robotics and Automation Letters (RA-L)</i>. <a href="http://raaslab.org/pubs/liu2021distributed.pdf">[PDF]</a>
 </p>
@@ -103,7 +103,7 @@ function toggleBibtex(articleid) {
 <!-- <li><p>Z. Zhang, J.Lee, JM Smereka, Y. Sung, <b>L. Zhou</b>, and P. Tokekar, Tree Search Techniques for Minimizing Detectability and Maximizing Visibility”. </p>
 </li> -->
 
-<li><p><b>L. Zhou</b> and P. Tokekar, “<a href="https://ieeexplore.ieee.org/abstract/document/8747443/">Sensor Assignment Algorithms to Improve Observability while Tracking Targets</a>,” <i>IEEE Transactions on Robotics (TRO)</i>, 35(5), pp. 1206-1219, 2019. Note: also selected for presentation at ICRA'20. <a href="https://arxiv.org/abs/1709.06428">[arXiv]</a> <a href="javascript:toggleBibtex('zhou2019sensor')">[BibTex]</a> <a href="https://www.youtube.com/watch?v=Kt0yeYXyrKQ">[Video]</a></p>
+<li><p><b>L. Zhou</b> and P. Tokekar, “<a href="https://ieeexplore.ieee.org/abstract/document/8747443/">Sensor Assignment Algorithms to Improve Observability while Tracking Targets</a>,” <i>IEEE Transactions on Robotics (T-RO)</i>, 35(5), pp. 1206-1219, 2019. Note: also selected for presentation at ICRA'20. <a href="https://arxiv.org/abs/1709.06428">[arXiv]</a> <a href="javascript:toggleBibtex('zhou2019sensor')">[BibTex]</a> <a href="https://www.youtube.com/watch?v=Kt0yeYXyrKQ">[Video]</a></p>
 </li>
 <div id="bib_zhou2019sensor" class="bibtex noshow"><pre>
 @Article{zhou2019sensor,
@@ -306,7 +306,7 @@ year = {2019},
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-05, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-17, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
