--- a/publications.html
+++ b/publications.html
@@ -63,13 +63,9 @@ function toggleBibtex(articleid) {
 <li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks</a>,” T-RO revision submitted. <a href="https://arxiv.org/abs/2003.13896">[arXiv]</a> </p>
 </li>
 
-<li><p>S. Mayya, R. K. Ramachandran, <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams,” RA-L+ICRA'22 conditionally accepted. <a href=https://arxiv.org/abs/2105.03813>[arXiv]</a>
-</p> 
-</li>
 
-<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning,” T-RO conditionally accepted. <a href="https://arxiv.org/abs/1910.01208">[arXiv]</a> 
-</p>
-</li>
+
+
 
 
 <li><p>Z. Zhang, <b>L. Zhou</b>, and P. Tokekar, “Strategies to Inject Spoofed Measurement Data,” RAS submitted. <a href="https://arxiv.org/abs/1809.04756">[arXiv]</a>
@@ -82,6 +78,14 @@ function toggleBibtex(articleid) {
 
 <h2>Journal Papers</h2>
 <ol>
+
+<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning,” <i>IEEE Transactions on Robotics (T-RO)</i>. Note: accepted. <a href="https://arxiv.org/abs/1910.01208">[arXiv]</a> 
+</p>
+</li>
+
+ <li><p>S. Mayya, R. K. Ramachandran, <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams,” <i>IEEE Robotics and Automation Letters (RA-L)</i>. Note: also selected for presentation at ICRA'22. <a href=https://arxiv.org/abs/2105.03813>[arXiv]</a>
+</p> 
+</li> 
 
 <li><p><b>L. Zhou</b> and P. Tokekar, “Risk-Aware Submodular Optimization for Multi-Robot Coordination,” <i>IEEE Transactions on Robotics (T-RO)</i>. Note: accepted. <a href="https://arxiv.org/abs/2003.10492">[arXiv]</a>
 </p>
@@ -306,7 +310,7 @@ year = {2019},
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-17, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-15, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
