--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 <h2>Recent News</h2>
 <ul>
 
+<li><p><b>Mar &lsquo;15:</b> Our paper on <a href="https://arxiv.org/abs/1910.01208">Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning</a> was accepted in Transactions on Robotics!</p>
+</li> 
 
 <li><p><b>Feb &lsquo;17:</b> Our paper on <a href="https://arxiv.org/abs/2003.10492">Risk-Aware Decision Making for Multi-Robot Systems</a> was accepted in Transactions on Robotics!</p>
 </li> 
@@ -100,8 +102,8 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 
 <li><p><b>Jan &lsquo;09:</b> I gave an invited seminar in the <a href="https://www.imse.hku.hk/">Department of Industrial and Manufacturing Systems at the University of Hong Kong</a>.
 
-<li><p><b>Dec &lsquo;27:</b> Our paper on <a href="https://arxiv.org/abs/1910.01208">Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning</a> was conditionally accepted in Transactions on Robotics.</p>
-</li> 
+<!-- <li><p><b>Dec &lsquo;27:</b> Our paper on <a href="https://arxiv.org/abs/1910.01208">Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning</a> was conditionally accepted in Transactions on Robotics.</p>
+</li>  -->
  
 <li><p><b>Sep &lsquo;11:</b> I am serving as a Program Committee member of the <a href="https://aaai.org/Conferences/AAAI-22/student-abstract-and-poster-program/"> AAAI-22 Student Abstract and Poster Program</a>.</p>  
 
@@ -162,7 +164,7 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-17, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-15, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
