--- a/research.html
+++ b/research.html
@@ -44,7 +44,7 @@ Today, robotics and autonomous systems have been increasingly used in various ar
 For long-term operation in large-scale environments, we need scalable and decentralized algorithms. However, with local communications, these decentralized algorithms typically perform worse than their centralized counterparts. Recently, I have been exploring the use of <b>graph neural networks (GNNs)</b> as a tool for automatically synthesizing decentralized planning strategies which are trained to imitate centralized experts.
 To this end, I developed a <b>GNN-based imitation learning framework</b> that learns <b>decentralized decision-making</b> for the robots from a <b>centralized expert</b> in <b>small-scale</b> scenarios and <b>generalizes well</b> the learned policies to <b>larger-scale</b> scenarios, e.g., larger environments and larger networks of robots. 
 <p />
-<a href="http://arxiv.org/abs/2105.08601" target=&ldquo;blank&rdquo;>[RA-L+ICRA'22 submission]</a>: Graph neural networks for decentralized multi-robot submodular action selection. 
+<a href="http://arxiv.org/abs/2105.08601" target=&ldquo;blank&rdquo;>[RA-L+IROS'22 submitted]</a>: Graph neural networks for decentralized multi-robot submodular action selection. 
 
 <h2>Countering Attacks and Failures through Resilient Coordination</h2>
 <!-- <img src="photos/uav_target.png" width="260", hspace="90"></img><img src="photos/tra_cover.png" width="280"></img> -->
@@ -57,13 +57,13 @@ To this end, I developed a <b>GNN-based imitation learning framework</b> that le
 </p>
 <a href="pdfs/RAL_target.pdf" target=&ldquo;blank&rdquo;>[RA-L+ICRA'19]</a>: Robust submodular maximization against robot/sensor attacks/failures;
 
-<br><a href="https://ieeexplore.ieee.org/document/9197243" target=&ldquo;blank&rdquo;>[ICRA'20]</a>,<a href="https://arxiv.org/abs/1910.01208" target=&ldquo;blank&rdquo;> [T-RO conditionally accepted]</a>: Decentralized (clique-based) robust submodular maximization against robot/sensor attacks/failures (left video); 
+<br><a href="https://ieeexplore.ieee.org/document/9197243" target=&ldquo;blank&rdquo;>[ICRA'20]</a>,<a href="https://arxiv.org/abs/1910.01208" target=&ldquo;blank&rdquo;> [T-RO accepted]</a>: Decentralized (clique-based) robust submodular maximization against robot/sensor attacks/failures (left video); 
 
 <br> <a href="https://ieeexplore.ieee.org/abstract/document/9431677" target=&ldquo;blank&rdquo;>[RA-L'21]</a>: Distributed (consensus-based) robust submodular maximization against robot/sensor attacks/failures;
 
-<br> <a href="https://roboticsconference.org/2020/program/papers/95.html" target=&ldquo;blank&rdquo;>[RSS'20]</a>, <a href="https://arxiv.org/abs/2003.13896" target=&ldquo;blank&rdquo;>[T-RO submission]</a>: Robust team orienteering over a longer planning time against robot/sensor attacks/failures;
+<br> <a href="https://roboticsconference.org/2020/program/papers/95.html" target=&ldquo;blank&rdquo;>[RSS'20]</a>, <a href="https://arxiv.org/abs/2003.13896" target=&ldquo;blank&rdquo;>[T-RO submitted]</a>: Robust team orienteering over a longer planning time against robot/sensor attacks/failures;
 
-<br> <a href="https://arxiv.org/abs/2109.09838" target=&ldquo;blank&rdquo;>[ACC'22 invited paper, T-RO submission]</a>: Robust monotone maximization against robot/sensor and communication attacks/failures;
+<br> <a href="https://arxiv.org/abs/2109.09838" target=&ldquo;blank&rdquo;>[ACC'22 invited paper, T-RO submitted]</a>: Robust monotone maximization against robot/sensor and communication attacks/failures;
 
 <br> <a href="https://ieeexplore.ieee.org/document/9340871" target=&ldquo;blank&rdquo;>[IROS'20]</a>: Resilient coordination to adapt to and recover from robot/sensor failures (right video). 
 <!-- </p>[<a href="https://youtu.be/xfMZloeKo6c" target=&ldquo;blank&rdquo;>Video</a>]</p> -->
@@ -80,13 +80,13 @@ To this end, I developed a <b>GNN-based imitation learning framework</b> that le
 
 <p> Along with optimizing CVaR for trustworthy decision-making, we designed a <b>Pareto optimization scheme</b> that adaptively balances maximizing team performance and minimizing risk of failures based on the abundance of <b>heterogeneous</b> team resources.</p>
 
-<a href="https://link.springer.com/chapter/10.1007/978-3-030-44051-0_9" target=&ldquo;blank&rdquo;>[WAFR'18], <a href="https://arxiv.org/abs/2003.10492" target=&ldquo;blank&rdquo;>[T-RO]</a>: Risk-aware submodular optimization to deal with uncertainties for multi-robot coordination (left figure). 
+<a href="https://link.springer.com/chapter/10.1007/978-3-030-44051-0_9" target=&ldquo;blank&rdquo;>[WAFR'18], <a href="https://arxiv.org/abs/2003.10492" target=&ldquo;blank&rdquo;>[T-RO accepted]</a>: Risk-aware submodular optimization to deal with uncertainties for multi-robot coordination (left figure). 
 
 <br> <a href="https://arxiv.org/abs/2003.11675" target=&ldquo;blank&rdquo;>[IROS'20]</a>: Risk-aware planning and assignment for ground vehicles using uncertain perception from aerial vehicles; dealing with uncertain extractions from Bayesian deep learning. 
 
 <br> <a href="https://arxiv.org/abs/2011.01095" target=&ldquo;blank&rdquo;>[IROS'21]</a>: Risk-aware submodular optimization for stochastic traveling salesperson problem. 
 
-<br> <a href="https://arxiv.org/abs/2105.03813" target=&ldquo;blank&rdquo;>[RA-L+ICRA'22 conditionally accepted]</a>: Adaptive and risk-aware target tracking for robot teams with heterogeneous sensors (right video). 
+<br> <a href="https://arxiv.org/abs/2105.03813" target=&ldquo;blank&rdquo;>[RA-L+ICRA'22 accepted]</a>: Adaptive and risk-aware target tracking for robot teams with heterogeneous sensors (right video). 
 
 
 <h2>Reducing Communication by Self-Triggered Control and Forming Subteams</h2>
@@ -138,11 +138,11 @@ We model this problem as a <b>discrete, sequential, two-player, zero-sum game</b
 We study the problem of <b>designing spoofing signals to corrupt and mislead the output of a Kalman filter</b>. Unlike existing works that focus on detection and filtering algorithms for the observer, we study the problem from the attacker’s point-of-view. In our model, the attacker can corrupt the measurements by adding spoofing signals. The attacker seeks to create a separation between the estimate of the Kalman filter with and without spoofing signals. We present a number of results on how to generate such spoofing signals, while minimizing the signal magnitude. The resulting algorithms are evaluated through simulations along with theoretical proofs.
 </p>
 
-<a href="pdfs/ACC_spoof.pdf" target=&ldquo;blank&rdquo;>[ACC'18], <a href="pdfs/TAC_spoof.pdf" target=&ldquo;blank&rdquo;>[TAC submission]</a>: Strategies to inject spoofed measurement data to mislead Kalman filter. 
+<a href="pdfs/ACC_spoof.pdf" target=&ldquo;blank&rdquo;>[ACC'18], <a href="pdfs/TAC_spoof.pdf" target=&ldquo;blank&rdquo;>[TAC submitted]</a>: Strategies to inject spoofed measurement data to mislead Kalman filter. 
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-17, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-15, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
