--- a/service.html
+++ b/service.html
@@ -36,7 +36,7 @@ Middle and high school students visiting our lab and flying DJI drone during VT 
 <h2>Mentor</h2>
 Robotics: Science and Systems (RSS) Mentoring Program: <a href="https://roboticsconference.org/2020/attending/inclusion/index.html">Inclusion@RSS</a>, 2020
 <br>
-Academic Mentoring Experiences: mentored multiple gradate and undergraduate students at Virginia Tech, University of Maryland, and University of Pennsylvania, since 2018 
+Academic Mentoring Experiences: mentored 15 gradate and undergraduate students at Virginia Tech, University of Maryland, and University of Pennsylvania, since 2018 
 
 <!-- <b>September 2019 - Present</b>, Resilient Team Orienteering Problem<br>
 <a href="https://www.linkedin.com/in/fanzhe-zhu-b15063165/">Guangyao Shi</a>, Ph.D. student <br>
