--- a/service.html
+++ b/service.html
@@ -36,7 +36,99 @@ Middle and high school students visiting our lab and flying DJI drone during VT 
 <h2>Mentor</h2>
 Robotics: Science and Systems (RSS) Mentoring Program: <a href="https://roboticsconference.org/2020/attending/inclusion/index.html">Inclusion@RSS</a>, 2020
 <br>
-Academic Mentoring Experiences: mentored 15 gradate and undergraduate students at Virginia Tech, University of Maryland, and University of Pennsylvania, since 2018 
+<br>
+Academic Mentoring Experiences: work(ed) with multiple gradate and undergraduate students at Virginia Tech, University of Maryland, and University of Pennsylvania
+
+<br>
+<b>Ph.D. Students</b>
+
+<br>
+<a href="https://sites.google.com/view/elijahslee">Elijah S. Lee</a>, University of Pennsylvania, Dec. 2021 -
+<br>
+<i>Project: Project: Graph Neural Networks for Multi-Player Perimeter Defense</i>
+<br>
+
+<br>
+<a href="https://www.grasp.upenn.edu/people/austin-chen/">Austin Chen</a>, University of Pennsylvania, Mar. 2021 -
+<br>
+<i>Project: Resilient Dynamic Resource Allocation with Stackelberg Games</i>
+<br>
+
+<br>
+<a href="https://vishnuduttsharma.github.io/">Vishnu Dutt Sharma</a>, University of Maryland, Mar. 2020 -
+<br>
+<i>Project 1: Risk-Aware Path Planning and Assignment with Bayesian Deep Learning</i>
+<br>
+<i>Project 2: Graph Neural Networks for Multi-Robot Submodular Action Selection</i>
+<br>
+
+<br>
+<a href="https://scholar.google.com/citations?user=KYPDiN4AAAAJ&hl=en">June Liu</a>, Virginia Tech, May 2020 - Mar. 2021
+<br>
+<i>Project: Distributed Resilient Submodular Maximization for Multi-Robot Action Selection</i>
+<br>
+
+<br>
+Guangyao Shi, University of Maryland, Sep. 2019 - Feb. 2021
+<br>
+<i>Project 1: Resilient Team Orienteering for Multi-Robot Information Gathering</i>
+<br>
+<i>Project 2: Communication-Aware Submodular Maximization for Multi-Robot Planning</i>
+<br>
+
+<br>
+<br>
+<b>M.S./MEng Students</b>
+<br>
+<a href="https://gauravkuppa.github.io/">Gaurav Kuppa</a>, University of Pennsylvania, Jan. 2022 -
+<br>
+<i>Project: A Platform of Multi-Robot Human Tracking with Reinforcement Learning</i>
+<br>
+
+
+<br>
+Jiazhen Liu, University of Pennsylvania, Jan. 2022 -
+<br>
+<i>Project: Decentralized Adaptive and Risk-Aware Target Tracking with Heterogeneous Sensors</i>
+<br>
+
+
+<br>
+<a href="https://www.grasp.upenn.edu/people/rahul-zahroof/">Rahul Zahroof</a>, University of Pennsylvania, Apr. 2021 -
+<br>
+<i>Project: Multi-Robot Target Tracking by Exploiting Heterogeneous Information Flows</i>
+<br>
+
+<br>
+Zijian An, University of Pennsylvania, Apr. 2021 -
+<br>
+<i>Project: Resilient Dynamic Resource Allocation with Stackelberg Games</i>
+<br>
+
+<br>
+<a href="https://github.com/arp95">Arpit Aggarwal</a>, University of Maryland, May 2020 - Dec. 2020
+<br>
+<i>Project: Multi-Robot Target Tracking with Reinforcement Learning</i>
+<br>
+
+<br>
+<br>
+<b>Undergraduate Students</b>
+
+<br>
+Rishab Balasubramanian, IISER Bhopal, Apr. 2020 - Mar. 2021
+<br>
+Now, Ph.D. student at Oregon State University EECS
+<br>
+<i>Project: Risk-Aware Submodular Optimization for Stochastic Traveling Salesman Problem</i>  
+<br>
+
+<br>
+Jessica Zhu, Electrical and Computer Engineering, Virginia Tech, May 2018 - Aug. 2019
+<br>
+Now, MS student at Georgia Tech ECE
+<br>
+<i>Project: <a href="https://sites.google.com/vt.edu/fanzhecav">Connected and Autonomous Vehicles</a></i>
 
 <!-- <b>September 2019 - Present</b>, Resilient Team Orienteering Problem<br>
 <a href="https://www.linkedin.com/in/fanzhe-zhu-b15063165/">Guangyao Shi</a>, Ph.D. student <br>
@@ -66,7 +158,7 @@ Reviewed 30+ papers for journals and conferences in areas of Robotics, Algorithm
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-21, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-11, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
