--- a/teaching.html
+++ b/teaching.html
@@ -13,8 +13,8 @@
 <td id="layout-menu">
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research.html">Research</a></div>
-<div class="menu-item"><a href="publications.html">Publications</a></div>
+<div class="menu-item"><a href="https://zhourobotics.github.io/">Lab Website</a></div>
+<div class="menu-item"><a href="publications1.html">Publications</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="service.html">Service</a></div>
 <div class="menu-item"><a href="cool_robots.html">Cool Robots</a></div>
@@ -23,13 +23,18 @@
 <div class="menu-item"><a href="https://twitter.com/Lifeng917">Twitter</a></div>
 </td>
 <td id="layout-content">
-<div id="toptitle"></div>
+<div id="toptitle">
 <h1>Teaching</h1>
-<p> My teaching philosophy is to inspire students to understand and learn by examples, and engage them in problem-finding and problem-solving through implementations. </p>
+</div>
+<!-- <p> My teaching philosophy is to inspire students to understand and learn by examples, and engage them in problem-finding and problem-solving through implementations. </p> -->
 
 <h2>Instructor</h2>
-Seminar Course: Multi-Robot Coordination, Planning, and Learning (in preparation), Spring 2022 <br>
-University of Pennsylvania
+<a href="https://youtu.be/-JD--ojnPEw">ECE T580: Decision Making for Robotics</a>, Fall 2022<br>
+Dept. of Electrical and Computer Engineering, Drexel University
+<br>
+
+<!-- Seminar Course: Multi-Robot Coordination, Planning, and Learning (in preparation), Spring 2022 <br>
+University of Pennsylvania -->
 
 <h2>Guest Lecturer</h2>
 <!-- <b>September 2019</b>, Resilient and Risk-Aware Submodular Maximization <br>
@@ -39,22 +44,22 @@ Dept. of Computer Science, University of Maryland
 <br>
 <br>
 <a href="http://tokekar.com/teaching/4984-5984S17/index.html">ECE 4984/5984: (Advanced) Robot Motion Planning</a>, Fall 2018<br>
-Dept. of Electrical & Computer Engineering, Virginia Tech
+Dept. of Electrical and Computer Engineering, Virginia Tech
 
-<h2>Teaching Assistant</h2>
+<!-- <h2>Teaching Assistant</h2>
 <a href="https://dev.coursicle.com/vt/courses/ECE/4405/">ECE 4405: Control Systems</a>, Fall 2016<br>
 Dept. of Electrical & Computer Engineering, Virginia Tech
 <br>
 <br>
 Public Management and Policy Analysis, Spring 2014<br>
-School of International and Public Affairs, Shanghai Jiao Tong University
+School of International and Public Affairs, Shanghai Jiao Tong University -->
 
 <!-- <h2>Mentor</h2>
 I have worked with multiple gradate and undergraduate students at Virginia Tech, University of Maryland, and University of Pennsylvania since 2018.  -->
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-05, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-07, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
