--- a/publications.html
+++ b/publications.html
@@ -30,8 +30,8 @@ function toggleBibtex(articleid) {
 <td id="layout-menu">
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="research.html">Research</a></div>
-<div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
+<div class="menu-item"><a href="https://zhourobotics.github.io/">Lab Website</a></div>
+<div class="menu-item"><a href="publications1.html">Publications</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="service.html">Service</a></div>
 <div class="menu-item"><a href="cool_robots.html">Cool Robots</a></div>
