--- a/index.html
+++ b/index.html
@@ -30,25 +30,30 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="photos/lifeng_bio.jpeg" alt="alt text" width="140px" height="170px" />&nbsp;</td>
-<td align="left"><p>Postdoc, <a href="https://www.upenn.edu/">University of Pennsylvania</a><br />
-<!-- 621 Whittemore Hall, Virginia Tech, <br /> -->
-Philadelphia, PA, USA <br /> 
-E-mail: <i>lz457</i> @ drexel.edu; <i>lfzhou</i> @ seas.upenn.edu
+<td align="left"><p><b>Assistant Professor</b> <br />
+ <a href="https://drexel.edu/">Drexel University</a><br />
+<a href="https://drexel.edu/engineering/academics/departments/electrical-computer-engineering/">Department of Electrical and Computer Engineering</a> <br /> 
+Director of the <a href="https://zhourobotics.github.io/">Zhou Lab</a> <br /> 
+E-mail: <i>lz457</i> @ drexel.edu
 
-<p>I will be joining the <a href="https://drexel.edu/engineering/academics/departments/electrical-computer-engineering/">Department of Electrical and Computer Engineering</a> at <a href="https://drexel.edu/"> Drexel University </a> as an Assistant Professor in Fall 2022.
-<br>
-<span style="color:red;">I’m looking for self-motivated students </span> with a background in multi-robot systems, robotics algorithms, machine learning, convex/combinatorial optimization, game theory, model predictive control, etc. Interested candidates are encouraged to contact me via email, with a short description of your academic background and research interests and a CV attached. <p>
-
+<p>
+  <!-- I will be joining the <a href="https://drexel.edu/engineering/academics/departments/electrical-computer-engineering/">Department of Electrical and Computer Engineering</a> at <a href="https://drexel.edu/"> Drexel University </a> as an Assistant Professor in Fall 2022. -->
+<!-- <br> -->
+<span style="color:red;">I’m looking for self-motivated students </span> with a background in multi-robot systems, robotics algorithms, machine learning, combinatorial optimization, game theory, model predictive control, etc. Interested candidates are encouraged to contact me via email, with a short description of your academic background and research interests and a CV attached. See details <a href="https://zhourobotics.github.io/Join/">here</a>.<p>
 
 
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a Postdoctoral Researcher in the <a href="https://www.grasp.upenn.edu/">GRASP Lab</a> at the <a href="https://www.upenn.edu/">University of Pennsylvania</a>, working with <a href="https://www.kumarrobotics.org/">Prof. Vijay Kumar</a>. I received my Ph.D. degree at <a href="https://vt.edu/">Virginia Tech</a> under the supervision of <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a> in the <a href="https://raaslab.org/">RAAS Lab</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that, I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China.
+
+<p>
+I am an Assistant Professor in the <a href="https://drexel.edu/engineering/academics/departments/electrical-computer-engineering/">Department of Electrical and Computer Engineering</a> at <a href="https://drexel.edu/">Drexel University</a>. Previously, I was a Postdoctoral Researcher at the <a href="https://www.grasp.upenn.edu/">GRASP Lab</a> of the <a href="https://www.upenn.edu/">University of Pennsylvania</a>. I obtained my Ph.D. in Electrical and Computer Engineering from <a href="https://vt.edu/">Virginia Tech</a> in 2020. Before that, I received my MS from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a> in 2016 and my BS from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a> in 2013. I serve as an Associate Editor for the ICRA Conference Editorial Board.
+
+<!-- I am a Postdoctoral Researcher in the <a href="https://www.grasp.upenn.edu/">GRASP Lab</a> at the <a href="https://www.upenn.edu/">University of Pennsylvania</a>, working with <a href="https://www.kumarrobotics.org/">Prof. Vijay Kumar</a>. I received my Ph.D. degree at <a href="https://vt.edu/">Virginia Tech</a> under the supervision of <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a> in the <a href="https://raaslab.org/">RAAS Lab</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that, I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China. -->
 
 <br />
 <br>
 
-My research focuses on enabling <b>security, trustworthiness, and long-term autonomy</b> in robotics and autonomous systems. I have been working in related areas such as <i>multi-robot coordination, approximation algorithms, combinatorial optimization, deep learning, model predictive control, and resilient and risk-aware decision making.</i> My long-term goal is to investigate <b>secure, reliable, and scalable multi-robot autonomy</b> when robots use data-driven machine learning techniques in the areas of <b> cyber-physical systems, the Internet of Things, precision agriculture, and smart cities.</b> I am especially interested in how <i>collaborative intelligence and learning paradigms</i> can help overcome challenges related to adversarial attacks and uncertainties on the perceptions and communications of decentralized multi-robot teams. <a href="research.html">Find out more</a>.
+My research focuses on enabling <b>security, trustworthiness, and long-term autonomy</b> in robotics and autonomous systems. I have been working in related areas such as <i>multi-robot coordination, approximation algorithms, combinatorial optimization, deep learning, model predictive control, and resilient and risk-aware decision making.</i> My long-term goal is to investigate <b>secure, reliable, and scalable multi-robot autonomy</b> when robots use data-driven machine learning techniques in the areas of <b> cyber-physical systems, the Internet of Things, precision agriculture, and smart cities.</b> I am especially interested in how <i>collaborative intelligence and learning paradigms</i> can help overcome challenges related to adversarial attacks and uncertainties on the perceptions and communications of decentralized multi-robot teams. <a href="https://zhourobotics.github.io/research/">Find out more</a>.
 
 <br />
 <br>
