--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 <table class="imgtable"><tr><td>
 <img src="photos/lifeng_bio.jpeg" alt="alt text" width="140px" height="170px" />&nbsp;</td>
 <td align="left"><p><b>Assistant Professor</b> <br />
- <a href="https://drexel.edu/">Drexel University</a><br />
-<a href="https://drexel.edu/engineering/academics/departments/electrical-computer-engineering/">Department of Electrical and Computer Engineering</a> <br /> 
 Director of the <a href="https://zhourobotics.github.io/">Zhou Lab</a> <br /> 
+<a href="https://drexel.edu/engineering/academics/departments/electrical-computer-engineering/">Electrical and Computer Engineering</a> <br /> 
+ <a href="https://drexel.edu/">Drexel University</a><br />
+
+Office: Bossone 503  <br />
 E-mail: <i>lz457</i> @ drexel.edu
 
 <p>
