--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ E-mail: <i>lz457</i> @ drexel.edu
 <p>
   <!-- I will be joining the <a href="https://drexel.edu/engineering/academics/departments/electrical-computer-engineering/">Department of Electrical and Computer Engineering</a> at <a href="https://drexel.edu/"> Drexel University </a> as an Assistant Professor in Fall 2022. -->
 <!-- <br> -->
-<span style="color:red;">I’m looking for self-motivated students </span> with a background in multi-robot systems, robotics algorithms, machine learning, combinatorial optimization, game theory, model predictive control, etc. Interested candidates are encouraged to contact me via email, with a short description of your academic background and research interests and a CV attached. See details <a href="https://zhourobotics.github.io/Join/">here</a>.<p>
+<!-- <span style="color:red;">I’m looking for self-motivated students </span> with a background in multi-robot systems, robotics algorithms, machine learning, combinatorial optimization, game theory, model predictive control, etc. Interested candidates are encouraged to contact me via email, with a short description of your academic background and research interests and a CV attached. See details <a href="https://zhourobotics.github.io/Join/">here</a>.<p> -->
 
 
 </td></tr></table>
@@ -93,7 +93,10 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 <h2>Recent News</h2>
 <ul>
 
-<li><p><b>Jul &lsquo;13:</b> I gave an invited talk in the <a href="https://robotics.wvu.edu/seminar-series">WVU Summer Robotics Seminar Series at West Virginia University</a>.
+<li><p><b>Nov &lsquo;18:</b> I gave an invited talk (virtual) in the <a href="https://rcs.charlotte.edu/seminar/current-events">Robotics and Controls Seminar at 
+ University of North Carolina at Charlotte </a>.
+
+<li><p><b>Jul &lsquo;13:</b> I gave an invited talk (virtual) in the <a href="https://robotics.wvu.edu/seminar-series">WVU Summer Robotics Seminar Series at West Virginia University</a>.
 
 <li><p><b>Mar &lsquo;15:</b> Our paper on <a href="https://arxiv.org/abs/1910.01208">Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning</a> was accepted in Transactions on Robotics!</p>
 </li> 
@@ -179,7 +182,7 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-01, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-12-09, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
