--- a/teaching.html
+++ b/teaching.html
@@ -29,8 +29,12 @@
 <!-- <p> My teaching philosophy is to inspire students to understand and learn by examples, and engage them in problem-finding and problem-solving through implementations. </p> -->
 
 <h2>Instructor</h2>
-<a href="https://youtu.be/-JD--ojnPEw">ECE T580: Decision Making for Robotics</a>, Fall 2022<br>
+<a href="https://drive.google.com/file/d/1ZyNr--v2n88aYvrVu9EJtiBFgwueE_wq/view?usp=sharing">ECE T480: Autonomous Mobile Robots</a>, S'23<br>
+<a href="https://drive.google.com/file/d/11dbpWIEPTd6CYMke7cEZco9Qx_6f5Vyy/view?usp=sharing">VIP-ENGR 370: Coordination and Planning for Heterogeneous Multi-Robot Systems</a>, W'22, S'23<br>
+<a href="https://drive.google.com/file/d/107CBNA0wJDVbKqYkzd9fdyROloFEy4si/view?usp=sharing">ECE T580: Decision Making for Robotics</a>, F'22<br>
 Dept. of Electrical and Computer Engineering, Drexel University
+
+
 <br>
 
 <!-- Seminar Course: Multi-Robot Coordination, Planning, and Learning (in preparation), Spring 2022 <br>
@@ -39,27 +43,27 @@ University of Pennsylvania -->
 <h2>Guest Lecturer</h2>
 <!-- <b>September 2019</b>, Resilient and Risk-Aware Submodular Maximization <br>
 <b>December 2019</b>, Student Presentation Organization <br> -->
-<a href="http://tokekar.com/teaching/CMSC818B-F19/index.html">CMSC 818B: Decision-Making for Robotics</a>, Fall 2019<br>
+<a href="http://tokekar.com/teaching/CMSC818B-F19/index.html">CMSC 818B: Decision-Making for Robotics</a>, F'19<br>
 Dept. of Computer Science, University of Maryland
-<br>
-<br>
+<!-- <br> -->
+<!-- <br>
 <a href="http://tokekar.com/teaching/4984-5984S17/index.html">ECE 4984/5984: (Advanced) Robot Motion Planning</a>, Fall 2018<br>
-Dept. of Electrical and Computer Engineering, Virginia Tech
+Dept. of Electrical and Computer Engineering, Virginia Tech -->
 
-<!-- <h2>Teaching Assistant</h2>
-<a href="https://dev.coursicle.com/vt/courses/ECE/4405/">ECE 4405: Control Systems</a>, Fall 2016<br>
+<h2>Teaching Assistant</h2>
+<a href="https://dev.coursicle.com/vt/courses/ECE/4405/">ECE 4405: Control Systems</a>, F'16<br>
 Dept. of Electrical & Computer Engineering, Virginia Tech
 <br>
 <br>
-Public Management and Policy Analysis, Spring 2014<br>
-School of International and Public Affairs, Shanghai Jiao Tong University -->
+Public Management and Policy Analysis, S'14<br>
+School of International and Public Affairs, Shanghai Jiao Tong University
 
 <!-- <h2>Mentor</h2>
 I have worked with multiple gradate and undergraduate students at Virginia Tech, University of Maryland, and University of Pennsylvania since 2018.  -->
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-07, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-11, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
